refactor: refactor logging and achitecture